--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "cutfitt_url",
   "version": "0.1.0",
   "private": true,
@@ -23,12 +24,16 @@
     "react-mde": "^11.5.0",
     "react-modal": "^3.16.1",
     "remark-gfm": "^4.0.0",
+    "sharp": "^0.33.4",
     "showdown": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^22",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
+    "@types/showdown": "^2.0.6",
     "eslint": "^9",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
