--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@firebase/analytics": "^0.10.7",
+    "axios": "^1.7.3",
     "firebase": "^10.12.5",
     "firebase-admin": "^12.3.0",
+    "html-to-image": "^1.11.11",
     "next": "14.2.5",
     "qrcode": "^1.5.3",
     "qrcode.react": "^3.1.0",
