--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -29,6 +31,11 @@
     "showdown": "^2.1.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^22",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
@@ -37,8 +44,11 @@
     "@types/showdown": "^2.0.6",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.7",
-    "typescript": "^5"
+    "ts-jest": "^29.2.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
