--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@firebase/analytics": "^0.10.7",
+    "@vitejs/plugin-react": "^4.3.1",
     "axios": "^1.7.3",
     "firebase": "^10.12.5",
     "firebase-admin": "^12.3.0",
@@ -25,13 +26,17 @@
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
+    "react-markdown-editor-lite": "^1.3.4",
     "react-modal": "^3.16.1",
+    "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
     "sharp": "^0.33.4",
     "showdown": "^2.1.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
@@ -48,6 +53,7 @@
     "tailwindcss": "^3.4.7",
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "vitest": "^2.0.5"
   }
 }
