--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@firebase/analytics": "^0.10.7",
     "@vitejs/plugin-react": "^4.3.1",
     "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.5",
     "firebase-admin": "^12.3.0",
     "html-to-image": "^1.11.11",
