--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "test": "vitest",
-    "test:watch": "vitest --watch",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage",
+    "test:coverage:ui": "vitest --coverage --ui"
   },
   "dependencies": {
     "@firebase/analytics": "^0.10.7",
-    "@vitejs/plugin-react": "^4.3.1",
     "axios": "^1.7.3",
     "date-fns": "^3.6.0",
     "firebase": "^10.12.5",
@@ -48,13 +49,18 @@
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
     "@types/showdown": "^2.0.6",
+    "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/coverage-v8": "^2.0.5",
+    "@vitest/ui": "^2.0.5",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
+    "jsdom": "^24.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.7",
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
+    "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.0.5"
   }
 }
